# dehydrated-all-inkl-hook

./: KasApi.wsdl  KasAuth.wsdl  hook.py  kas_api.py  pyproject.toml
src/dehydrated_all_inkl_hook/: hook.py  kas_api.py
