[project]
name = "dehydrated_all_inkl_hook"
version = "0.1.0"
description = "dns-01 hook script to use the ALL-INKL KAS API with dehydrated"
authors = [
    {name = "Till Ehrengruber", email = "till@ehrengruber.ch"}
]

[dependencies]
python = "^3.9"
lxml = "^5.1.0"
zeep = "^4.2.0"
dnspython = "^2.1.0"
